# share-it

./: .gitignore  Cargo.toml
share-it-api/: Cargo.toml
share-it-api/src/: main.rs
share-it-core/: Cargo.toml
share-it-core/src/: chatroom.rs  lib.rs  user.rs  waitlist.rs
share-it-core/src/repositories/: implementations.rs  mod.rs
share-it-core/src/services/: abstractions.rs  commands.rs  handlers.rs  mod.rs
src/: chatroom.rs  lib.rs  playlist.rs  song.rs  user.rs  waitlist.rs
src/collection_abstractions/: mod.rs  repositories.rs
src/repositories/: abstractions.rs  mod.rs
src/soundcloud_api/: mod.rs  responses.rs
src/test_tools/: factories.rs  mocks.rs  mod.rs
tests/: integration_tests.rs
tests/common/: collections.rs  error.rs  mod.rs  model_generators.rs
