[package]
name = "share-it"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"
domain_derive = "0.2.137"
domain_patterns = "0.2.141"
