[package]
name = "share-it-api"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-session = "0.3.0"

dotenv = "0.15.0"
oauth2 = "3.0.0-alpha.9"
serde = { version = "1.0", features = ["derive"] }

# vimeo-rs = { git = "https://github.com/libellis/vimeo-rs.git" }
