[package]
name = "share-it"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"
rusty_ulid = "0.9.3"
mysql = "16.1.0"
lazy_static = "1.4.0"
actix-web = "2.0.0"
